seaqt/QtWidgets/gen_qgesture.h

class QChildEvent;
class QEvent;
class QGesture;
class QMetaMethod;
class QMetaObject;
class QObject;
class QPointF;
class QTimerEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QGesture QGesture;
typedef struct QGestureEvent QGestureEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPointF QPointF;
typedef struct QTapAndHoldGesture QTapAndHoldGesture;
typedef struct QTimerEvent QTimerEvent;
typedef struct QWidget QWidget;
typedef struct VirtualQTapGesture VirtualQTapGesture;
typedef struct QTapGesture_VTable{
	void (*destructor)(VirtualQTapGesture* self);
	QMetaObject* (*metaObject)(const VirtualQTapGesture* self);
	void* (*metacast)(VirtualQTapGesture* self, const char* param1);
	int (*metacall)(VirtualQTapGesture* self, int param1, int param2, void** param3);
	bool (*event)(VirtualQTapGesture* self, QEvent* event);
	bool (*eventFilter)(VirtualQTapGesture* self, QObject* watched, QEvent* event);
	void (*timerEvent)(VirtualQTapGesture* self, QTimerEvent* event);
	void (*childEvent)(VirtualQTapGesture* self, QChildEvent* event);
	void (*customEvent)(VirtualQTapGesture* self, QEvent* event);
	void (*connectNotify)(VirtualQTapGesture* self, QMetaMethod* signal);
	void (*disconnectNotify)(VirtualQTapGesture* self, QMetaMethod* signal);
}QTapGesture_VTable;
VirtualQTapGesture* QTapGesture_new2(const QTapGesture_VTable* vtbl, size_t vdata, QObject* parent);
const QMetaObject* QTapGesture_staticMetaObject();
typedef struct VirtualQTapAndHoldGesture VirtualQTapAndHoldGesture;
typedef struct QTapAndHoldGesture_VTable{
	void (*destructor)(VirtualQTapAndHoldGesture* self);
	QMetaObject* (*metaObject)(const VirtualQTapAndHoldGesture* self);
	void* (*metacast)(VirtualQTapAndHoldGesture* self, const char* param1);
	int (*metacall)(VirtualQTapAndHoldGesture* self, int param1, int param2, void** param3);
	bool (*event)(VirtualQTapAndHoldGesture* self, QEvent* event);
	bool (*eventFilter)(VirtualQTapAndHoldGesture* self, QObject* watched, QEvent* event);
	void (*timerEvent)(VirtualQTapAndHoldGesture* self, QTimerEvent* event);
	void (*childEvent)(VirtualQTapAndHoldGesture* self, QChildEvent* event);
	void (*customEvent)(VirtualQTapAndHoldGesture* self, QEvent* event);
	void (*connectNotify)(VirtualQTapAndHoldGesture* self, QMetaMethod* signal);
	void (*disconnectNotify)(VirtualQTapAndHoldGesture* self, QMetaMethod* signal);
}QTapAndHoldGesture_VTable;
VirtualQTapAndHoldGesture* QTapAndHoldGesture_new(const QTapAndHoldGesture_VTable* vtbl, size_t vdata);
VirtualQTapAndHoldGesture* QTapAndHoldGesture_new2(const QTapAndHoldGesture_VTable* vtbl, size_t vdata, QObject* parent);
QMetaObject* QTapAndHoldGesture_metaObject(const QTapAndHoldGesture* self);
void* QTapAndHoldGesture_metacast(QTapAndHoldGesture* self, const char* param1);
int QTapAndHoldGesture_metacall(QTapAndHoldGesture* self, int param1, int param2, void** param3);
struct miqt_string QTapAndHoldGesture_tr(const char* s);
QPointF* QTapAndHoldGesture_position(const QTapAndHoldGesture* self);
void QTapAndHoldGesture_setPosition(QTapAndHoldGesture* self, QPointF* pos);
void QTapAndHoldGesture_setTimeout(int msecs);
int QTapAndHoldGesture_timeout();
struct miqt_string QTapAndHoldGesture_tr2(const char* s, const char* c);
struct miqt_string QTapAndHoldGesture_tr3(const char* s, const char* c, int n);
QMetaObject* QTapAndHoldGesture_virtualbase_metaObject(const VirtualQTapAndHoldGesture* self);
void* QTapAndHoldGesture_virtualbase_metacast(VirtualQTapAndHoldGesture* self, const char* param1);
int QTapAndHoldGesture_virtualbase_metacall(VirtualQTapAndHoldGesture* self, int param1, int param2, void** param3);
bool QTapAndHoldGesture_virtualbase_event(VirtualQTapAndHoldGesture* self, QEvent* event);
bool QTapAndHoldGesture_virtualbase_eventFilter(VirtualQTapAndHoldGesture* self, QObject* watched, QEvent* event);
void QTapAndHoldGesture_virtualbase_timerEvent(VirtualQTapAndHoldGesture* self, QTimerEvent* event);
void QTapAndHoldGesture_virtualbase_childEvent(VirtualQTapAndHoldGesture* self, QChildEvent* event);
void QTapAndHoldGesture_virtualbase_customEvent(VirtualQTapAndHoldGesture* self, QEvent* event);
void QTapAndHoldGesture_virtualbase_connectNotify(VirtualQTapAndHoldGesture* self, QMetaMethod* signal);
void QTapAndHoldGesture_virtualbase_disconnectNotify(VirtualQTapAndHoldGesture* self, QMetaMethod* signal);
QObject* QTapAndHoldGesture_protectedbase_sender(const VirtualQTapAndHoldGesture* self);
int QTapAndHoldGesture_protectedbase_senderSignalIndex(const VirtualQTapAndHoldGesture* self);
int QTapAndHoldGesture_protectedbase_receivers(const VirtualQTapAndHoldGesture* self, const char* signal);
bool QTapAndHoldGesture_protectedbase_isSignalConnected(const VirtualQTapAndHoldGesture* self, QMetaMethod* signal);
const QMetaObject* QTapAndHoldGesture_staticMetaObject();
typedef struct VirtualQGestureEvent VirtualQGestureEvent;
typedef struct QGestureEvent_VTable{
	void (*destructor)(VirtualQGestureEvent* self);
	void (*setAccepted)(VirtualQGestureEvent* self, bool accepted);
	QEvent* (*clone)(const VirtualQGestureEvent* self);
}QGestureEvent_VTable;
VirtualQGestureEvent* QGestureEvent_new(const QGestureEvent_VTable* vtbl, size_t vdata, struct miqt_array /* of QGesture* */  gestures);
VirtualQGestureEvent* QGestureEvent_new2(const QGestureEvent_VTable* vtbl, size_t vdata, QGestureEvent* param1);
struct miqt_array /* of QGesture* */  QGestureEvent_gestures(const QGestureEvent* self);
QGesture* QGestureEvent_gesture(const QGestureEvent* self, int type);
struct miqt_array /* of QGesture* */  QGestureEvent_activeGestures(const QGestureEvent* self);
struct miqt_array /* of QGesture* */  QGestureEvent_canceledGestures(const QGestureEvent* self);
void QGestureEvent_setAccepted(QGestureEvent* self, QGesture* param1, bool param2);
void QGestureEvent_accept(QGestureEvent* self, QGesture* param1);
void QGestureEvent_ignore(QGestureEvent* self, QGesture* param1);
bool QGestureEvent_isAccepted(const QGestureEvent* self, QGesture* param1);
void QGestureEvent_setAccepted2(QGestureEvent* self, int param1, bool param2);
void QGestureEvent_acceptWithQtGestureType(QGestureEvent* self, int param1);
void QGestureEvent_ignoreWithQtGestureType(QGestureEvent* self, int param1);
bool QGestureEvent_isAcceptedWithQtGestureType(const QGestureEvent* self, int param1);
void QGestureEvent_setWidget(QGestureEvent* self, QWidget* widget);
QWidget* QGestureEvent_widget(const QGestureEvent* self);
QPointF* QGestureEvent_mapToGraphicsScene(const QGestureEvent* self, QPointF* gesturePoint);
void QGestureEvent_virtualbase_setAccepted(VirtualQGestureEvent* self, bool accepted);
QEvent* QGestureEvent_virtualbase_clone(const VirtualQGestureEvent* self);