seaqt/QtWidgets/gen_qgesture.nim

proc fcQTapGesture_new2(vtbl: pointer, parent: pointer): ptr cQTapGesture {.importc: "QTapGesture_new2".}
proc fcQTapGesture_staticMetaObject(): pointer {.importc: "QTapGesture_staticMetaObject".}
proc fcQTapAndHoldGesture_metaObject(self: pointer, ): pointer {.importc: "QTapAndHoldGesture_metaObject".}
proc fcQTapAndHoldGesture_metacast(self: pointer, param1: cstring): pointer {.importc: "QTapAndHoldGesture_metacast".}
proc fcQTapAndHoldGesture_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QTapAndHoldGesture_metacall".}
proc fcQTapAndHoldGesture_tr(s: cstring): struct_miqt_string {.importc: "QTapAndHoldGesture_tr".}
proc fcQTapAndHoldGesture_position(self: pointer, ): pointer {.importc: "QTapAndHoldGesture_position".}
proc fcQTapAndHoldGesture_setPosition(self: pointer, pos: pointer): void {.importc: "QTapAndHoldGesture_setPosition".}
proc fcQTapAndHoldGesture_setTimeout(msecs: cint): void {.importc: "QTapAndHoldGesture_setTimeout".}
proc fcQTapAndHoldGesture_timeout(): cint {.importc: "QTapAndHoldGesture_timeout".}
proc fcQTapAndHoldGesture_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QTapAndHoldGesture_tr2".}
proc fcQTapAndHoldGesture_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QTapAndHoldGesture_tr3".}
type cQTapAndHoldGestureVTable {.pure.} = object
  destructor*: proc(vtbl: ptr cQTapAndHoldGestureVTable, self: ptr cQTapAndHoldGesture) {.cdecl, raises:[], gcsafe.}
  metaObject*: proc(vtbl, self: pointer, ): pointer {.cdecl, raises: [], gcsafe.}
  metacast*: proc(vtbl, self: pointer, param1: cstring): pointer {.cdecl, raises: [], gcsafe.}
  metacall*: proc(vtbl, self: pointer, param1: cint, param2: cint, param3: pointer): cint {.cdecl, raises: [], gcsafe.}
  event*: proc(vtbl, self: pointer, event: pointer): bool {.cdecl, raises: [], gcsafe.}
  eventFilter*: proc(vtbl, self: pointer, watched: pointer, event: pointer): bool {.cdecl, raises: [], gcsafe.}
  timerEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  childEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  customEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  connectNotify*: proc(vtbl, self: pointer, signal: pointer): void {.cdecl, raises: [], gcsafe.}
  disconnectNotify*: proc(vtbl, self: pointer, signal: pointer): void {.cdecl, raises: [], gcsafe.}
proc fcQTapAndHoldGesture_virtualbase_metaObject(self: pointer, ): pointer {.importc: "QTapAndHoldGesture_virtualbase_metaObject".}
proc fcQTapAndHoldGesture_virtualbase_metacast(self: pointer, param1: cstring): pointer {.importc: "QTapAndHoldGesture_virtualbase_metacast".}
proc fcQTapAndHoldGesture_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QTapAndHoldGesture_virtualbase_metacall".}
proc fcQTapAndHoldGesture_virtualbase_event(self: pointer, event: pointer): bool {.importc: "QTapAndHoldGesture_virtualbase_event".}
proc fcQTapAndHoldGesture_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool {.importc: "QTapAndHoldGesture_virtualbase_eventFilter".}
proc fcQTapAndHoldGesture_virtualbase_timerEvent(self: pointer, event: pointer): void {.importc: "QTapAndHoldGesture_virtualbase_timerEvent".}
proc fcQTapAndHoldGesture_virtualbase_childEvent(self: pointer, event: pointer): void {.importc: "QTapAndHoldGesture_virtualbase_childEvent".}
proc fcQTapAndHoldGesture_virtualbase_customEvent(self: pointer, event: pointer): void {.importc: "QTapAndHoldGesture_virtualbase_customEvent".}
proc fcQTapAndHoldGesture_virtualbase_connectNotify(self: pointer, signal: pointer): void {.importc: "QTapAndHoldGesture_virtualbase_connectNotify".}
proc fcQTapAndHoldGesture_virtualbase_disconnectNotify(self: pointer, signal: pointer): void {.importc: "QTapAndHoldGesture_virtualbase_disconnectNotify".}
proc fcQTapAndHoldGesture_protectedbase_sender(self: pointer, ): pointer {.importc: "QTapAndHoldGesture_protectedbase_sender".}
proc fcQTapAndHoldGesture_protectedbase_senderSignalIndex(self: pointer, ): cint {.importc: "QTapAndHoldGesture_protectedbase_senderSignalIndex".}
proc fcQTapAndHoldGesture_protectedbase_receivers(self: pointer, signal: cstring): cint {.importc: "QTapAndHoldGesture_protectedbase_receivers".}
proc fcQTapAndHoldGesture_protectedbase_isSignalConnected(self: pointer, signal: pointer): bool {.importc: "QTapAndHoldGesture_protectedbase_isSignalConnected".}
proc fcQTapAndHoldGesture_new(vtbl: pointer, ): ptr cQTapAndHoldGesture {.importc: "QTapAndHoldGesture_new".}
proc fcQTapAndHoldGesture_new2(vtbl: pointer, parent: pointer): ptr cQTapAndHoldGesture {.importc: "QTapAndHoldGesture_new2".}
proc fcQTapAndHoldGesture_staticMetaObject(): pointer {.importc: "QTapAndHoldGesture_staticMetaObject".}
proc fcQGestureEvent_gestures(self: pointer, ): struct_miqt_array {.importc: "QGestureEvent_gestures".}
proc fcQGestureEvent_gesture(self: pointer, typeVal: cint): pointer {.importc: "QGestureEvent_gesture".}
proc fcQGestureEvent_activeGestures(self: pointer, ): struct_miqt_array {.importc: "QGestureEvent_activeGestures".}
proc fcQGestureEvent_canceledGestures(self: pointer, ): struct_miqt_array {.importc: "QGestureEvent_canceledGestures".}
proc fcQGestureEvent_setAccepted(self: pointer, param1: pointer, param2: bool): void {.importc: "QGestureEvent_setAccepted".}
proc fcQGestureEvent_accept(self: pointer, param1: pointer): void {.importc: "QGestureEvent_accept".}
proc fcQGestureEvent_ignore(self: pointer, param1: pointer): void {.importc: "QGestureEvent_ignore".}
proc fcQGestureEvent_isAccepted(self: pointer, param1: pointer): bool {.importc: "QGestureEvent_isAccepted".}
proc fcQGestureEvent_setAccepted2(self: pointer, param1: cint, param2: bool): void {.importc: "QGestureEvent_setAccepted2".}
proc fcQGestureEvent_acceptWithQtGestureType(self: pointer, param1: cint): void {.importc: "QGestureEvent_acceptWithQtGestureType".}
proc fcQGestureEvent_ignoreWithQtGestureType(self: pointer, param1: cint): void {.importc: "QGestureEvent_ignoreWithQtGestureType".}
proc fcQGestureEvent_isAcceptedWithQtGestureType(self: pointer, param1: cint): bool {.importc: "QGestureEvent_isAcceptedWithQtGestureType".}
proc fcQGestureEvent_setWidget(self: pointer, widget: pointer): void {.importc: "QGestureEvent_setWidget".}
proc fcQGestureEvent_widget(self: pointer, ): pointer {.importc: "QGestureEvent_widget".}
proc fcQGestureEvent_mapToGraphicsScene(self: pointer, gesturePoint: pointer): pointer {.importc: "QGestureEvent_mapToGraphicsScene".}
type cQGestureEventVTable {.pure.} = object
  destructor*: proc(vtbl: ptr cQGestureEventVTable, self: ptr cQGestureEvent) {.cdecl, raises:[], gcsafe.}
  setAccepted*: proc(vtbl, self: pointer, accepted: bool): void {.cdecl, raises: [], gcsafe.}
  clone*: proc(vtbl, self: pointer, ): pointer {.cdecl, raises: [], gcsafe.}
proc fcQGestureEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void {.importc: "QGestureEvent_virtualbase_setAccepted".}
proc fcQGestureEvent_virtualbase_clone(self: pointer, ): pointer {.importc: "QGestureEvent_virtualbase_clone".}
proc fcQGestureEvent_new(vtbl: pointer, gestures: struct_miqt_array): ptr cQGestureEvent {.importc: "QGestureEvent_new".}
proc fcQGestureEvent_new2(vtbl: pointer, param1: pointer): ptr cQGestureEvent {.importc: "QGestureEvent_new2".}

proc metaObject*(self: gen_qgesture_types.QGesture, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQGesture_metaObject(self.h), owned: false)

proc metacast*(self: gen_qgesture_types.QGesture, param1: cstring): pointer =
  fcQGesture_metacast(self.h, param1)

proc metacall*(self: gen_qgesture_types.QGesture, param1: cint, param2: cint, param3: pointer): cint =
  fcQGesture_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qgesture_types.QGesture, s: cstring): string =
  let v_ms = fcQGesture_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc gestureType*(self: gen_qgesture_types.QGesture, ): cint =
  cint(fcQGesture_gestureType(self.h))

proc state*(self: gen_qgesture_types.QGesture, ): cint =
  cint(fcQGesture_state(self.h))

proc hotSpot*(self: gen_qgesture_types.QGesture, ): gen_qpoint_types.QPointF =
  gen_qpoint_types.QPointF(h: fcQGesture_hotSpot(self.h), owned: true)

proc setHotSpot*(self: gen_qgesture_types.QGesture, value: gen_qpoint_types.QPointF): void =
  fcQGesture_setHotSpot(self.h, value.h)

proc hasHotSpot*(self: gen_qgesture_types.QGesture, ): bool =
  fcQGesture_hasHotSpot(self.h)

proc unsetHotSpot*(self: gen_qgesture_types.QGesture, ): void =
  fcQGesture_unsetHotSpot(self.h)

proc setGestureCancelPolicy*(self: gen_qgesture_types.QGesture, policy: cint): void =
  fcQGesture_setGestureCancelPolicy(self.h, cint(policy))

proc gestureCancelPolicy*(self: gen_qgesture_types.QGesture, ): cint =
  cint(fcQGesture_gestureCancelPolicy(self.h))

proc tr*(_: type gen_qgesture_types.QGesture, s: cstring, c: cstring): string =
  let v_ms = fcQGesture_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr*(_: type gen_qgesture_types.QGesture, s: cstring, c: cstring, n: cint): string =
  let v_ms = fcQGesture_tr3(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

type QGesturemetaObjectProc* = proc(self: QGesture): gen_qobjectdefs_types.QMetaObject {.raises: [], gcsafe.}
type QGesturemetacastProc* = proc(self: QGesture, param1: cstring): pointer {.raises: [], gcsafe.}
type QGesturemetacallProc* = proc(self: QGesture, param1: cint, param2: cint, param3: pointer): cint {.raises: [], gcsafe.}
type QGestureeventProc* = proc(self: QGesture, event: gen_qcoreevent_types.QEvent): bool {.raises: [], gcsafe.}
type QGestureeventFilterProc* = proc(self: QGesture, watched: gen_qobject_types.QObject, event: gen_qcoreevent_types.QEvent): bool {.raises: [], gcsafe.}
type QGesturetimerEventProc* = proc(self: QGesture, event: gen_qcoreevent_types.QTimerEvent): void {.raises: [], gcsafe.}
type QGesturechildEventProc* = proc(self: QGesture, event: gen_qcoreevent_types.QChildEvent): void {.raises: [], gcsafe.}
type QGesturecustomEventProc* = proc(self: QGesture, event: gen_qcoreevent_types.QEvent): void {.raises: [], gcsafe.}
type QGestureconnectNotifyProc* = proc(self: QGesture, signal: gen_qmetaobject_types.QMetaMethod): void {.raises: [], gcsafe.}
type QGesturedisconnectNotifyProc* = proc(self: QGesture, signal: gen_qmetaobject_types.QMetaMethod): void {.raises: [], gcsafe.}
type QGestureVTable* {.inheritable, pure.} = object
  vtbl: cQGestureVTable
  metaObject*: QGesturemetaObjectProc
  metacast*: QGesturemetacastProc
  metacall*: QGesturemetacallProc
  event*: QGestureeventProc
  eventFilter*: QGestureeventFilterProc
  timerEvent*: QGesturetimerEventProc
  childEvent*: QGesturechildEventProc
  customEvent*: QGesturecustomEventProc
  connectNotify*: QGestureconnectNotifyProc
  disconnectNotify*: QGesturedisconnectNotifyProc
proc QGesturemetaObject*(self: gen_qgesture_types.QGesture, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQGesture_virtualbase_metaObject(self.h), owned: false)

proc miqt_exec_callback_cQGesture_metaObject(vtbl: pointer, self: pointer): pointer {.cdecl.} =
  let vtbl = cast[ptr QGestureVTable](vtbl)
  let self = QGesture(h: self)
  var virtualReturn = vtbl[].metaObject(self)
  virtualReturn.owned = false # TODO move?
  let virtualReturn_h = virtualReturn.h
  virtualReturn.h = nil
  virtualReturn_h

proc QGesturemetacast*(self: gen_qgesture_types.QGesture, param1: cstring): pointer =
  fcQGesture_virtualbase_metacast(self.h, param1)
